--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>YO</title>
+    <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
     <script>
       var getImgWidth = function () {
        return $('.slide.displayed-slide img').width();
